--- a/tanhai_63133878/pubspec.yaml
+++ b/tanhai_63133878/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage: ^11.7.4
   flutter_slidable: ^3.1.0
   image_picker: ^1.1.1
+  url_launcher: ^6.2.6
 
 
   # The following adds the Cupertino Icons font to your application.
